@@ -1,0 +1,4 @@
+1
+0
+NULL
+3
